Bug 158636 - Wrong border behaviour when cells are merged
Summary: Wrong border behaviour when cells are merged
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-12-11 09:36 UTC by Jean-Luc Coulon
Modified: 2023-12-22 19:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test case (8.01 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-12-11 09:37 UTC, Jean-Luc Coulon
Details
screenshot of the test case (96.21 KB, image/png)
2023-12-11 09:38 UTC, Jean-Luc Coulon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Luc Coulon 2023-12-11 09:36:36 UTC
Description:
If I merge cells and use format -> cells -> borders and click a diagonal line, not only the diagonal for the whole merged cell is drawn, but also the diagonal for the first upper left cell.

Steps to Reproduce:
1.Merge several cells
2.use format -> cells -> borders
3.draw a diagonal border

Actual Results:
diagonals are drown both on the merged cells and on the upper left cell

Expected Results:
only the merged cells diagonal should be drawn


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 420(Build:0)
CPU threads: 8; OS: Linux 6.7; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Debian package version: 4:24.2.0~beta1-1
Calc: threaded
Comment 1 Jean-Luc Coulon 2023-12-11 09:37:16 UTC
Created attachment 191352 [details]
test case
Comment 2 Jean-Luc Coulon 2023-12-11 09:38:38 UTC
Created attachment 191353 [details]
screenshot of the test case
Comment 3 Xisco Faulí 2023-12-11 11:29:06 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-06-19 12:23:55 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-06-19 18:26:03 +0200
commit e27d4cc31e04be4c47b5085dfa2363ee45457e8a (patch)
tree 75aebab2bd9a0c2d0f152fb545757af0513f5aec
parent 281bdb5a979f0516fe7a9cd35585fd3daf4021b1 (diff)
tdf#150534 reduce the memory consumption of cells when calculating

Bisected with: bibisect-linux64-24.2

Adding Cc: to Noel Grandin
Comment 4 Commit Notification 2023-12-13 07:28:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f625928c346109216045d08b4dda30dbada005f5

tdf#158636 Wrong border behaviour when cells are merged

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-12-13 15:53:04 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ca965c4e54d5126ded9e099dbb5e073560914155

tdf#158636 Wrong border behaviour when cells are merged

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Jean-Luc Coulon 2023-12-22 19:16:59 UTC
> Affected users are encouraged to test the fix and report feedback.
Tested with 24.2.0~rc1 (from debian experimental) and it is fine for me.
Thanks
Jean-Luc