tdf#158636 Wrong border behaviour when cells are merged

regression from
    commit e27d4cc31e04be4c47b5085dfa2363ee45457e8a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jun 19 12:23:55 2023 +0200
    tdf#150534 reduce the memory consumption of cells when calculating

where I accidentally removed a line in lclSetMergedRange that
set mbMergedOrg to true.

And then the singlevalfields plugin spotted that
mbMergedOrig had only value, and so it got removed in:
    commit 884a2cd39a7c0433a5bbbf4e83e2a9b16cdad71c
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Jun 30 15:36:51 2023 +0200
    loplugin:singlevalfields

Change-Id: I9fc057f63e14df36c73d25c421ddbec72f7723e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160619
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit f625928c346109216045d08b4dda30dbada005f5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160640
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>